take home exercise 1

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Evil pro course"
+title: "ISSS608_Visualisation"
 description: |
   Welcome to the website. I hope you enjoy it!
 site: distill::distill_website
