--- a/In_class_exercise/Inclassexercise04.Rmd
+++ b/In_class_exercise/Inclassexercise04.Rmd
@@ -12,12 +12,50 @@ output: distill::distill_article
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = TRUE,eval = TRUE,message = FALSE,warning = FALSE)
 ```
 
-Distill is a publication format for scientific and technical writing, native to the web. 
+# Getting Started
 
-Learn more about using Distill for R Markdown at <https://rstudio.github.io/distill>.
+## Setting up R packages
+
+To start with, [ggstatsplot](https://indrajeetpatil.github.io/ggstatsplot/) and tidyverse packages will be launched using library().
+
+
+```{r}
+packages = c('ggstatsplot','tidyverse','rstantools')
+for (p in packages){
+  if(!require(p, character.only = T)){
+    install.packages(p)
+  }
+}
+```
+
+
+## Importing Data
+
+```{r}
+exam <- read_csv("Data/Exam_data.csv")
+```
+
+## Working with ggstatesplot
+
+### ANOVA test
+
+```{r fig.height=8,fig.width=6}
+set.seed(1234)
+
+ggbetweenstats(
+  data = exam,
+  x = RACE,
+  y = ENGLISH,
+  type = "bayes"
+)
+```
+
+
+
+
 
 
 
