--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "ISSS608_Visualisation"
+title: "Visualisation Learning"
 description: |
-  Welcome to the website. I hope you enjoy it!
+  Welcome to Kay's website. I hope you enjoy it!
 site: distill::distill_website
 ---
 
